<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/size_margin_16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        style="@style/PrimaryButtonLarge.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btb_delete"
        style="@style/PrimaryButtonLarge.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/PrimaryButtonLarge.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/btb_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>