<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_warning"
        android:layout_width="@dimen/icon_size_48dp"
        android:layout_height="@dimen/icon_size_48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/tv_required_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_warning"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/required_auth"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintTop_toBottomOf="@id/iv_warning" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_required_auth"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/PrimaryButtonSmall.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_background"
            android:text="@string/btn_giveup"
            android:textColor="@color/cinder" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/PrimaryButtonSmall.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>
</RelativeLayout>