<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.scoto.fodamy.ui.auth.reset_password.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.reset_password.ResetPasswordFragment">

        <TextView
            android:id="@+id/tv_reset_password"
            style="@style/AuthScreenTitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_40dp"
            android:text="@string/reset_password"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_margin_16dp"
            android:layout_marginTop="@dimen/size_margin_40dp"
            android:layout_marginEnd="@dimen/size_margin_16dp"
            android:hint="@string/email_address"
            app:layout_constraintTop_toBottomOf="@+id/tv_reset_password"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/cinder">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_input_layout_background" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            style="@style/PrimaryButtonLarge.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_16dp"
            android:letterSpacing="0"
            android:text="@string/reset"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>